--- a/stories/index.html
+++ b/stories/index.html
@@ -411,6 +411,12 @@
       <td><a name="yue0003"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0004</td>
+      <td><a href="/stories/yue/0004_山羊、野狗、同水牛_slides.html" target="_blank">山羊、野狗、同水牛</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="yue0004"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0006</td>
       <td><a href="/stories/yue/0006_阿南西與智慧_slides.html" target="_blank">阿南西與智慧</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -441,6 +447,12 @@
       <td><a name="yue0010"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0027</td>
+      <td><a href="/stories/yue/0027_決定_slides.html" target="_blank">決定</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="yue0027"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0030</td>
       <td><a href="/stories/yue/0030_感情_slides.html" target="_blank">感情</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -451,6 +463,12 @@
       <td><a href="/stories/yue/0049_彩虹_slides.html" target="_blank">彩虹</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="yue0049"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0052</td>
+      <td><a href="/stories/yue/0052_星卑桂亞_slides.html" target="_blank">星卑桂亞</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="yue0052"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0053</td>
@@ -472,7 +490,7 @@
     </tr>
     <tr>
       <td>0073</td>
-      <td><a href="/stories/yue/0073_計動物_slides.html" target="_blank">計動物</a></td>
+      <td><a href="/stories/yue/0073_計數_slides.html" target="_blank">計數</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="yue0073"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
@@ -495,10 +513,22 @@
       <td><a name="yue0086"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0087</td>
+      <td><a href="/stories/yue/0087_我好鍾意睇書_slides.html" target="_blank">我好鍾意睇書</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="yue0087"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0093</td>
       <td><a href="/stories/yue/0093_心肝椗_slides.html" target="_blank">心肝椗</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="yue0093"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0095</td>
+      <td><a href="/stories/yue/0095_贊瑪好勁_slides.html" target="_blank">贊瑪好勁！</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="yue0095"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0112</td>
@@ -591,16 +621,34 @@
       <td><a name="yue0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0302</td>
+      <td><a href="/stories/yue/0302_火_slides.html" target="_blank">火</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="yue0302"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0309</td>
       <td><a href="/stories/yue/0309_大同細_slides.html" target="_blank">大同細</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="yue0309"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0327</td>
+      <td><a href="/stories/yue/0327_計動物_slides.html" target="_blank">計動物</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="yue0327"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0331</td>
       <td><a href="/stories/yue/0331_雨_slides.html" target="_blank">雨</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="yue0331"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0360</td>
+      <td><a href="/stories/yue/0360_計吓貓貓_slides.html" target="_blank">計吓貓貓</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm42a0JWbXd1Ums"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="yue0360"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
   </tbody>
 </table>
@@ -2149,6 +2197,12 @@
       <td><a href="/stories/no/0009_hvor-er-katten-min_slides.html" target="_blank">Hvor er katten min?</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsNW5BWmJEX0tHRmM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="no0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0052</td>
+      <td><a href="/stories/no/0052_simbegwire_slides.html" target="_blank">Simbegwire</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsNW5BWmJEX0tHRmM"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="no0052"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0067</td>
@@ -3901,7 +3955,7 @@
       <td>0004</td>
       <td><a href="http://africanstorybook.org/stories/goat-dog-and-cow">Goat, Dog and Cow</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0004">ar</a>, <a href="#es0004">es</a>, <a href="#fa0004">fa</a>, <a href="#ko0004">ko</a>, <a href="#pa0004">pa</a>, <a href="#tl0004">tl</a>, <a href="#zh0004">zh</a></td>
+      <td><a href="#ar0004">ar</a>, <a href="#es0004">es</a>, <a href="#fa0004">fa</a>, <a href="#ko0004">ko</a>, <a href="#pa0004">pa</a>, <a href="#tl0004">tl</a>, <a href="#yue0004">yue</a>, <a href="#zh0004">zh</a></td>
     </tr>
     <tr>
       <td>0006</td>
@@ -3949,7 +4003,7 @@
       <td>0027</td>
       <td><a href="http://africanstorybook.org/stories/decision">Decision</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0027">ar</a>, <a href="#es0027">es</a>, <a href="#fa0027">fa</a>, <a href="#ko0027">ko</a>, <a href="#pa0027">pa</a>, <a href="#tl0027">tl</a>, <a href="#zh0027">zh</a></td>
+      <td><a href="#ar0027">ar</a>, <a href="#es0027">es</a>, <a href="#fa0027">fa</a>, <a href="#ko0027">ko</a>, <a href="#pa0027">pa</a>, <a href="#tl0027">tl</a>, <a href="#yue0027">yue</a>, <a href="#zh0027">zh</a></td>
     </tr>
     <tr>
       <td>0030</td>
@@ -3973,7 +4027,7 @@
       <td>0052</td>
       <td><a href="http://africanstorybook.org/stories/simbegwire">Simbegwire</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0052">ar</a>, <a href="#es0052">es</a>, <a href="#fa0052">fa</a>, <a href="#ko0052">ko</a>, <a href="#pa0052">pa</a>, <a href="#tl0052">tl</a>, <a href="#tr0052">tr</a>, <a href="#zh0052">zh</a></td>
+      <td><a href="#ar0052">ar</a>, <a href="#es0052">es</a>, <a href="#fa0052">fa</a>, <a href="#ko0052">ko</a>, <a href="#no0052">no</a>, <a href="#pa0052">pa</a>, <a href="#tl0052">tl</a>, <a href="#tr0052">tr</a>, <a href="#yue0052">yue</a>, <a href="#zh0052">zh</a></td>
     </tr>
     <tr>
       <td>0053</td>
@@ -4045,7 +4099,7 @@
       <td>0087</td>
       <td><a href="http://africanstorybook.org/stories/i-read">I like to read</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0087">ar</a>, <a href="#de0087">de</a>, <a href="#es0087">es</a>, <a href="#fa0087">fa</a>, <a href="#gu0087">gu</a>, <a href="#hi0087">hi</a>, <a href="#ko0087">ko</a>, <a href="#no0087">no</a>, <a href="#pa0087">pa</a>, <a href="#sv0087">sv</a>, <a href="#tl0087">tl</a>, <a href="#zh0087">zh</a></td>
+      <td><a href="#ar0087">ar</a>, <a href="#de0087">de</a>, <a href="#es0087">es</a>, <a href="#fa0087">fa</a>, <a href="#gu0087">gu</a>, <a href="#hi0087">hi</a>, <a href="#ko0087">ko</a>, <a href="#no0087">no</a>, <a href="#pa0087">pa</a>, <a href="#sv0087">sv</a>, <a href="#tl0087">tl</a>, <a href="#yue0087">yue</a>, <a href="#zh0087">zh</a></td>
     </tr>
     <tr>
       <td>0089</td>
@@ -4063,7 +4117,7 @@
       <td>0095</td>
       <td><a href="http://africanstorybook.org/stories/zama-great">Zama is great!</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0095">ar</a>, <a href="#de0095">de</a>, <a href="#es0095">es</a>, <a href="#fa0095">fa</a>, <a href="#hi0095">hi</a>, <a href="#ko0095">ko</a>, <a href="#nn0095">nn</a>, <a href="#no0095">no</a>, <a href="#pa0095">pa</a>, <a href="#tl0095">tl</a>, <a href="#zh0095">zh</a></td>
+      <td><a href="#ar0095">ar</a>, <a href="#de0095">de</a>, <a href="#es0095">es</a>, <a href="#fa0095">fa</a>, <a href="#hi0095">hi</a>, <a href="#ko0095">ko</a>, <a href="#nn0095">nn</a>, <a href="#no0095">no</a>, <a href="#pa0095">pa</a>, <a href="#tl0095">tl</a>, <a href="#yue0095">yue</a>, <a href="#zh0095">zh</a></td>
     </tr>
     <tr>
       <td>0098</td>
@@ -4363,7 +4417,7 @@
       <td>0302</td>
       <td><a href="http://africanstorybook.org/stories/fire">Fire</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0302">ar</a>, <a href="#eo0302">eo</a>, <a href="#es0302">es</a>, <a href="#fa0302">fa</a>, <a href="#gu0302">gu</a>, <a href="#ko0302">ko</a>, <a href="#nn0302">nn</a>, <a href="#no0302">no</a>, <a href="#pa0302">pa</a>, <a href="#tl0302">tl</a>, <a href="#zh0302">zh</a></td>
+      <td><a href="#ar0302">ar</a>, <a href="#eo0302">eo</a>, <a href="#es0302">es</a>, <a href="#fa0302">fa</a>, <a href="#gu0302">gu</a>, <a href="#ko0302">ko</a>, <a href="#nn0302">nn</a>, <a href="#no0302">no</a>, <a href="#pa0302">pa</a>, <a href="#tl0302">tl</a>, <a href="#yue0302">yue</a>, <a href="#zh0302">zh</a></td>
     </tr>
     <tr>
       <td>0306</td>
@@ -4417,7 +4471,7 @@
       <td>0327</td>
       <td><a href="http://africanstorybook.org/stories/counting-animals">Counting animals</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#aeb0327">aeb</a>, <a href="#ar0327">ar</a>, <a href="#es0327">es</a>, <a href="#fa0327">fa</a>, <a href="#ko0327">ko</a>, <a href="#no0327">no</a>, <a href="#pa0327">pa</a>, <a href="#tl0327">tl</a>, <a href="#zh0327">zh</a></td>
+      <td><a href="#aeb0327">aeb</a>, <a href="#ar0327">ar</a>, <a href="#es0327">es</a>, <a href="#fa0327">fa</a>, <a href="#ko0327">ko</a>, <a href="#no0327">no</a>, <a href="#pa0327">pa</a>, <a href="#tl0327">tl</a>, <a href="#yue0327">yue</a>, <a href="#zh0327">zh</a></td>
     </tr>
     <tr>
       <td>0331</td>
@@ -4453,7 +4507,7 @@
       <td>0360</td>
       <td><a href="http://africanstorybook.org/stories/counting-cats">Counting cats</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/4.0/">CC-BY-NC</a></td>
-      <td><a href="#aeb0360">aeb</a>, <a href="#hi0360">hi</a>, <a href="#no0360">no</a>, <a href="#zh0360">zh</a></td>
+      <td><a href="#aeb0360">aeb</a>, <a href="#hi0360">hi</a>, <a href="#no0360">no</a>, <a href="#yue0360">yue</a>, <a href="#zh0360">zh</a></td>
     </tr>
   </tbody>
 </table>
