--- a/stories/yue/0030_感情_slides.html
+++ b/stories/yue/0030_感情_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/06.jpg" /></p>
-<p>媽咪攬我嘅時候，我感到好俾人錫。</p>
+<p>媽咪抱抱我嘅時候，我感到好俾人錫。</p>
 <center>
 <strong>5</strong>
 </center>
