--- a/stories/yue/0112_我嘅身體_slides.html
+++ b/stories/yue/0112_我嘅身體_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/02.jpg" /></p>
-<p>……可以跑。</p>
+<p>我可以同佢跑。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/03.jpg" /></p>
-<p>……可以跳。</p>
+<p>我可以同佢跳。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/04.jpg" /></p>
-<p>……可以跳舞。</p>
+<p>我可以同佢跳舞。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/05.jpg" /></p>
-<p>……可以游水。</p>
+<p>我可以同佢游水。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/06.jpg" /></p>
-<p>……可以跳繩。</p>
+<p>我可以同佢跳繩。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/07.jpg" /></p>
-<p>……可以踢波。</p>
+<p>我可以同佢踢波。</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/08.jpg" /></p>
-<p>……可以逃走。</p>
+<p>我可以同佢逃走。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/09.jpg" /></p>
-<p>但係點都唔可以飛！</p>
+<p>但係永遠都唔可以同佢飛！</p>
 <center>
 <strong>8</strong>
 </center>
