--- a/stories/no/0052_simbegwire_slides.html
+++ b/stories/no/0052_simbegwire_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>چه کار داری میکنی‌؟ - Global African Storybook</title>
+  <title>Simbegwire - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="چه-کار-داری-میکنی" class="slide level1">
-<h1 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl">چه کار داری میکنی‌؟</h1>
+<section id="simbegwire" class="slide level1">
+<h1>Simbegwire</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/02.jpg" /></p>
-<p dir="rtl">من دارم آواز می‌خوانم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/02.jpg" /></p>
+<p>Da Simbegwires mor døde ble hun veldig lei seg. Simbegwires far gjorde sitt beste for å ta hånd om datteren sin. Litt etter litt lærte de å bli lykkelige igjen, uten Simbegwires mor. Hver morgen satt de og snakket om dagen som lå foran dem. Hver kveld lagde de middag sammen. Etter at de hadde tatt oppvasken hjalp Simbegwires far henne med leksene.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/03.jpg" /></p>
-<p dir="rtl">او دارد دست تکان میدهد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/03.jpg" /></p>
+<p>En dag kom Simbegwires far hjem senere enn vanlig. &quot;Hvor er du, jenta mi?&quot; ropte han. Simbegwire løp til faren sin. Hun stoppet opp da hun så at han holdt en dame i hånda. &quot;Jeg vil at du skal møte en spesiell kvinne, jenta mi.&quot; Dette er Anita,&quot; sa han og smilte.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/04.jpg" /></p>
-<p dir="rtl">من دارم دست میزنم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/04.jpg" /></p>
+<p>&quot;Hei Simbegwire, faren din har fortalt meg mye om deg,&quot; sa Anita. Men hun smilte ikke og tok ikke hånden til jenta. Simbegwires far var glad og begeistret. Han snakket om at de tre skulle bo sammen, og hvor godt de skulle få det. &quot;Jenta mi, jeg håper du vil akseptere Anita som moren din,&quot; sa han.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/05.jpg" /></p>
-<p dir="rtl">او خودش را کش میدهد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/05.jpg" /></p>
+<p>Livet til Simbegwire forandret seg. Hun hadde ikke lenger tid til å sitte sammen med faren sin om morgenen. Anita ga henne så mye husarbeid at hun ble for sliten til å gjøre leksene om kvelden. Hun gikk rett til sengs etter middag. Den eneste trøsten hun hadde var et fargerikt teppe moren hennes hadde gitt henne. Simbegwires far så ikke ut til å legge merke til at datteren hans var ulykkelig.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/06.jpg" /></p>
-<p dir="rtl">او صدا میزند.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/06.jpg" /></p>
+<p>Etter noen måneder fortalte Simbegwires far dem at han ville komme til å være borte for en stund. &quot;Jeg må reise på grunn av jobben min,&quot; sa han. Men jeg vet at dere vil ta vare på hverandre.&quot; Simbegwire trakk en trist mine, men faren la ikke merke til det. Anita sa ikke noe. Hun var ikke glad hun heller.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/07.jpg" /></p>
-<p dir="rtl">من پاسخ می‌دهم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/07.jpg" /></p>
+<p>Ting ble bare værre for Simbegwire. Hvis hun ikke gjorde ferdig husarbeidet, eller klagde, slo Anita henne. Og under middagen spiste Anita det meste av maten, slik at Simbegwire bare fikk noen få rester. Hver natt gråt Simbegwire til hun falt i søvn mens hun klemte rundt teppet fra moren sin.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/08.jpg" /></p>
-<p dir="rtl">او گوش میدهد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/08.jpg" /></p>
+<p>Én morgen brukte Simbegwire lang tid på å stå opp. &quot;Din latsabb!&quot; ropte Anita. Hun dro Simbegwire ut av senga. Teppet hun satte så stor pris på satt fast på en spiker, og revnet.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/09.jpg" /></p>
-<p dir="rtl">تو داری چکار میکنی‌؟</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/09.jpg" /></p>
+<p>Simbegwire var veldig opprørt. Hun bestemte seg for å rømme. Hun tok bitene fra morens teppe, pakket litt mat, og dro avgårde. Hun fulgte den samme veien som faren hennes hadde tatt.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,17 +168,89 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" id="چه-کار-داری-میکنی-1">چه کار داری میکنی‌؟</h2>
-<strong>Text:</strong> Nina Orange<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Saeed Nazari<br> <strong>Language:</strong> Persian<br>
-<p dir="rtl">
-This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/what-are-you-doing'>here</a>
-<p dir="rtl"><div class="license">
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/10.jpg" /></p>
+<p>Da kvelden kom klatret hun opp i et høyt tre ved en bekk og redde seg en seng i grenene. Da hun gikk og la seg, sang hun: &quot;mamma, mamma, mamma, du forlot meg. Du forlot meg og kom aldri tilbake. Pappa er ikke glad i meg lenger. Mamma, når kommer du tilbake? Du forlot meg.&quot;</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/11.jpg" /></p>
+<p>Neste morgen sang Simbegwire sangen igjen. Da kvinnene kom for å vaske klærne sine i bekken, hørte de den triste sangen fra det høye treet. De trodde det bare vinden som raslet med bladene, og fortsatte med arbeidet sitt. Men én av kvinnene hørte veldig nøye på sangen.</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/12.jpg" /></p>
+<p>Denne kvinnen så opp i treet. Da hun så jenta og bitene av det fargerike teppet, ropte hun: &quot;Simbegwire, min brors datter!&quot; De andre kvinnene stoppet å vaske og hjalp Simbegwire med å klatre ned fra treet. Tanta hennes ga den lille jenta en klem og prøvde å trøste henne.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/13.jpg" /></p>
+<p>Simbegwires tante tok med seg barnet til sitt eget hus. Hun ga Simbegwire varm mat, og la henne til å sove med teppet til moren hennes. Den natten gråt Simbegwire i det hun sovnet. Men det var tårer av lettelse. Hun visste at tanta hennes ville ta seg av henne.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/14.jpg" /></p>
+<p>Da Simbegwires far kom hjem, fant han rommet hennes tomt. &quot;Hva har skjedd, Anita?&quot; spurte han med et tungt hjerte. Kvinnen svarte at Simbegwire hadde stukket av. &quot;Jeg ville at hun skulle respektere meg&quot;, sa hun. Men kanskje jeg var for streng.&quot; Simbegwires far forlot huset og gikk i retning av bekken. Han fortsatte til landsbyen til søsteren sin for å finne ut om hun hadde sett Simbegwire.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/15.jpg" /></p>
+<p>Simbegwire lekte med fetterne og kusinene sine da hun så faren sin på lang avstand. Hun var redd han skulle bli sint, så hun løp inn i huset og gjemte seg. Men faren hennes gikk til henne og sa, &quot;Simbegwire, du har funnet deg en perfekt mor. En som er glad i deg og som forstår deg. Jeg er stolt av deg og glad i deg.&quot; De ble enige om at Simbegwire skulle bli boende hos tanta si så lenge hun ville.</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/16.jpg" /></p>
+<p>Faren hennes besøkte henne hver dag. Etter hvert kom han med Anita. Hun rakte hånda til Simbegwire. Jeg er veldig lei meg, vesla, jeg tok feil,&quot; gråt hun. &quot;Vil du la meg prøve igjen?&quot; Simbegwire så på faren sin og den bekymrede minen hans. Da tok hun et steg frem og la langsomt armene rundt Anita.</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/17.jpg" /></p>
+<p>Neste uke inviterte Anita Simbegwire, sammen med fetterene, kusinene, og tanta, hjem til seg for et måltid. For en fest! Anita lagde alle yndlingsrettene til Simbegwire, og alle spiste til de var gode og mette. Deretter lekte barna mens de voksne snakket. Simbegwire følte seg glad og modig. Hun bestemte seg for at snart, veldig snart, skulle hun flytte hjem og bo med faren og stemoren sin.</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="simbegwire-1">Simbegwire</h2>
+<strong>Tekst:</strong> Rukia Nantale<br> <strong>Illustrasjoner:</strong> Benjamin Mitchley<br> <strong>Oversettelse:</strong> Espen Stranger-Johannessen<br> <strong>Språk:</strong> norsk<br>
+<p>
+Denne fortellingen kommer fra <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, som jobber med å oversette fortellingene fra <a href='http://africanstorybook.org/'>African Storybook Project</a> til alle verdens språk.
+<p>
+Du kan se den originale fortellingen på ASP-websida <a href='http://africanstorybook.org/stories/simbegwire'>her</a>
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
+<p><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
