--- a/stories/yue/0004_山羊、野狗、同水牛_slides.html
+++ b/stories/yue/0004_山羊、野狗、同水牛_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>چه کار داری میکنی‌؟ - Global African Storybook</title>
+  <title>山羊、野狗、同水牛 - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="چه-کار-داری-میکنی" class="slide level1">
-<h1 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl">چه کار داری میکنی‌؟</h1>
+<section id="山羊野狗同水牛" class="slide level1">
+<h1>山羊、野狗、同水牛</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/02.jpg" /></p>
-<p dir="rtl">من دارم آواز می‌خوانم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/02.jpg" /></p>
+<p>山羊、野狗、同水牛係好朋友嚟0架。有日，佢哋一齊去坐的士。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/03.jpg" /></p>
-<p dir="rtl">او دارد دست تکان میدهد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/03.jpg" /></p>
+<p>當佢哋到咗目的地0既時候，司機叫佢哋交車飛。水牛畀咗自己嗰份。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/04.jpg" /></p>
-<p dir="rtl">من دارم دست میزنم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/04.jpg" /></p>
+<p>野狗冇帶散紙，所以佢就畀多咗少少。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/05.jpg" /></p>
-<p dir="rtl">او خودش را کش میدهد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/05.jpg" /></p>
+<p>司機正要畀野狗找數，估唔到山羊冇畀錢就走甩咗。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/06.jpg" /></p>
-<p dir="rtl">او صدا میزند.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/06.jpg" /></p>
+<p>司機好嬲，結果佢冇畀野狗找數就開走咗。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/07.jpg" /></p>
-<p dir="rtl">من پاسخ می‌دهم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/07.jpg" /></p>
+<p>所以，而家呢你可以見到野狗佢見到有車嚟就搏晒命追埋去，因為佢想叫司機畀佢找數。</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/08.jpg" /></p>
-<p dir="rtl">او گوش میدهد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/08.jpg" /></p>
+<p>山羊呢，聽親有車嚟就嚇到趕快逃走，因為佢驚冇交車飛就會畀人捉咗。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/09.jpg" /></p>
-<p dir="rtl">تو داری چکار میکنی‌؟</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/09.jpg" /></p>
+<p>但係水牛聽到有車嚟一啲都唔會急。佢好定當噉過馬路，因為佢知道佢已經交好晒車飛。</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,17 +168,17 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" id="چه-کار-داری-میکنی-1">چه کار داری میکنی‌؟</h2>
-<strong>Text:</strong> Nina Orange<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Saeed Nazari<br> <strong>Language:</strong> Persian<br>
-<p dir="rtl">
+<h2 id="山羊野狗同水牛-1">山羊、野狗、同水牛</h2>
+<strong>文:</strong> Fabian Wakholi<br> <strong>圖:</strong> Marleen Visser<br> <strong>譯:</strong> dohliam<br> <strong>語言:</strong> 粵語<br>
+<p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/what-are-you-doing'>here</a>
-<p dir="rtl"><div class="license">
+<p>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/goat-dog-and-cow'>here</a>
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
+<p><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
