--- a/stories/yue/0030_感情.html
+++ b/stories/yue/0030_感情.html
@@ -77,7 +77,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>粵語</div><div class="page
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/06.jpg" /></p>
 
-<p>媽咪攬我嘅時候，我感到好俾人錫。</p>
+<p>媽咪抱抱我嘅時候，我感到好俾人錫。</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
