--- a/stories/yue/0087_我好鍾意睇書_slides.html
+++ b/stories/yue/0087_我好鍾意睇書_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>چه کار داری میکنی‌؟ - Global African Storybook</title>
+  <title>我好鍾意睇書 - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="چه-کار-داری-میکنی" class="slide level1">
-<h1 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl">چه کار داری میکنی‌؟</h1>
+<section id="我好鍾意睇書" class="slide level1">
+<h1>我好鍾意睇書</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/02.jpg" /></p>
-<p dir="rtl">من دارم آواز می‌خوانم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/02.jpg" /></p>
+<p>我好鍾意睇書。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/03.jpg" /></p>
-<p dir="rtl">او دارد دست تکان میدهد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/03.jpg" /></p>
+<p>我可以讀俾邊個聽呢？</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/04.jpg" /></p>
-<p dir="rtl">من دارم دست میزنم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/04.jpg" /></p>
+<p>細妹瞓得好淰。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/05.jpg" /></p>
-<p dir="rtl">او خودش را کش میدهد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/05.jpg" /></p>
+<p>我可以讀俾邊個聽呢？</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/06.jpg" /></p>
-<p dir="rtl">او صدا میزند.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/06.jpg" /></p>
+<p>媽咪同嫲嫲都唔得閒。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/07.jpg" /></p>
-<p dir="rtl">من پاسخ می‌دهم.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/07.jpg" /></p>
+<p>我可以讀俾邊個聽呢？</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/08.jpg" /></p>
-<p dir="rtl">او گوش میدهد.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/08.jpg" /></p>
+<p>爸爸同爺爺都唔得閒。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/09.jpg" /></p>
-<p dir="rtl">تو داری چکار میکنی‌؟</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/09.jpg" /></p>
+<p>我可以讀俾邊個聽呢？我可以讀俾自己聽啦！</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,17 +168,17 @@
 </section>
 <section class="slide level1">
 
-<h2 dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" dir="rtl" id="چه-کار-داری-میکنی-1">چه کار داری میکنی‌؟</h2>
-<strong>Text:</strong> Nina Orange<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Saeed Nazari<br> <strong>Language:</strong> Persian<br>
-<p dir="rtl">
+<h2 id="我好鍾意睇書-1">我好鍾意睇書</h2>
+<strong>文:</strong> Letta Machoga<br> <strong>圖:</strong> Wiehan de Jager<br> <strong>譯:</strong> dohliam<br> <strong>語言:</strong> 粵語<br>
+<p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/what-are-you-doing'>here</a>
-<p dir="rtl"><div class="license">
+<p>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/i-read'>here</a>
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
+<p><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
