--- a/stories/yue/0112_我嘅身體.html
+++ b/stories/yue/0112_我嘅身體.html
@@ -49,56 +49,56 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>粵語</div><div class="page
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/02.jpg" /></p>
 
-<p>……可以跑。</p>
+<p>我可以同佢跑。</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/03.jpg" /></p>
 
-<p>……可以跳。</p>
+<p>我可以同佢跳。</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/04.jpg" /></p>
 
-<p>……可以跳舞。</p>
+<p>我可以同佢跳舞。</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/05.jpg" /></p>
 
-<p>……可以游水。</p>
+<p>我可以同佢游水。</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/06.jpg" /></p>
 
-<p>……可以跳繩。</p>
+<p>我可以同佢跳繩。</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/07.jpg" /></p>
 
-<p>……可以踢波。</p>
+<p>我可以同佢踢波。</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/08.jpg" /></p>
 
-<p>……可以逃走。</p>
+<p>我可以同佢逃走。</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/09.jpg" /></p>
 
-<p>但係點都唔可以飛！</p>
+<p>但係永遠都唔可以同佢飛！</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
